@@ -2,9 +2,8 @@ package com.webapp.storage;
 
 public class MainUtil {
     public static void main(String[] args) {
-        System.out.println(Integer.valueOf(-1) == Integer.valueOf(-1));//true
-        System.out.println(new Integer(-1) == new Integer(-1));//false
-
+        System.out.println(Integer.valueOf(-1) == Integer.valueOf(-1));
+        System.out.println(Integer.valueOf(-1) == new Integer(-1));
         int result = getInt();
         System.out.println(result);
     }
